# bejo-backend

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.sh
app/: main.py
app/api/: chat.py  health.py  upload.py  vectorstore.py
app/core/: embeddings.py  llm.py  splitter.py  vectorstore.py
app/models/: request.py  response.py
app/services/: __init__.py  rag_service.py
qdrant_data/: raft_state.json
qdrant_data/collections/bejo_knowledge_level_1/0/: replica_state.json
qdrant_data/collections/bejo_knowledge_level_1/0/segments/06d6c30c-e88b-45a0-96d2-15547622159e/payload_index/: IDENTITY  LOG  MANIFEST-000045
qdrant_data/collections/bejo_knowledge_level_1/0/segments/2aa8a72d-9d49-4278-a074-72eccc77a55c/payload_index/: IDENTITY  LOG  MANIFEST-000045
qdrant_data/collections/bejo_knowledge_level_1/0/segments/56c8899f-368f-49e4-893e-f322c0425964/payload_index/: IDENTITY  LOG  MANIFEST-000045
qdrant_data/collections/bejo_knowledge_level_1/0/segments/5e5626cb-46bd-4fa0-b873-c369281f5acc/payload_index/: IDENTITY  LOG  MANIFEST-000045
qdrant_data/collections/bejo_knowledge_level_1/0/segments/6ee83c3b-e0fc-419b-82c5-e9e848307bbe/payload_index/: IDENTITY  LOG  MANIFEST-000045
qdrant_data/collections/bejo_knowledge_level_1/0/segments/6ff5068b-8260-4bf5-b1f1-fc1571553852/payload_index/: IDENTITY  LOG  MANIFEST-000045
qdrant_data/collections/bejo_knowledge_level_1/0/segments/81f67f15-2a2b-4a55-915f-8ae56d93d2ed/payload_index/: IDENTITY  LOG  MANIFEST-000045
qdrant_data/collections/bejo_knowledge_level_1/0/segments/9ebbb046-1851-4c40-9942-7ca3a2fd86aa/payload_index/: IDENTITY  LOG  MANIFEST-000045
qdrant_data/collections/bejo_knowledge_level_2/0/segments/04eb66c1-e4f7-4c39-bfa9-98966f6e35b0/payload_index/: IDENTITY  LOG  MANIFEST-000045
qdrant_data/collections/bejo_knowledge_level_2/0/segments/09eea86a-664c-4d99-8984-391932eb345c/payload_index/: IDENTITY  LOG  (+1 more)
uploads/: dummy.txt  skripsi ijal (1)[1].docx
(+66 files in other folders)
