[project]
name = "bejo-backend"
version = "0.1.6"
description = "Backend RAG service built with FastAPI, LangGraph, Ollama, and Qdrant"
readme = "README.md"
authors = ["Danang Hapis Fadillah <danangpostman37@gmail.com>"]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-docling>=1.0.0",
    "langchain-ollama>=0.3.3",
    "langchain-qdrant>=0.2.0",
    "langchain-redis>=0.2.3",
    "langgraph>=0.5.0",
    "passlib>=1.7.4",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.14.3",
    "redis>=6.2.0",
    "uvicorn>=0.35.0",
]